<?xml version="1.0"?>
<package format="2">
  <name>sync_package</name>
  <version>0.0.0</version>
  <description>The sync_package package</description>

  <maintainer email="user@todo.todo">TODO: Maintainer Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
